fixed spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,7 @@ i.skill {
 .headertext{
     color: #25986f;
     font-weight: 550;
+    margin: 30px 0px;
 }
 
 .jumbotron {
